# rust-orm-for-mysql

./: Cargo.toml  README.md  readme.md
my_macro_crate/: Cargo.toml
my_macro_crate/src/: attrs.rs  lib.rs  schema.rs
my_macro_crate/tests/: macro_test.rs
src/: generators.rs  lib.rs  main.rs  schema.rs
tests/: orm_test.rs
