[package]
name = "rust_to_mysql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "20.0.2"
lazy_static = "1.4"
log = "0.4"
syn = { version = "1.0.86", features = ["full"] }
quote = "1.0"
typetag = "*"
serde = "1.0"
serde_derive = "1.0"
proc-macro2 = "1.0"
my_macro_crate = { path = "my_macro_crate" }
derivative = "2.2.0"
