[package]
name = "my_macro_crate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
darling = "0.13.1"
proc-macro2 = "1"
struct-field-names-as-array = "0.2.0"
env_logger = "0.9.0"